<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.profile.DetailProfileActivity">

    <LinearLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24"
            android:contentDescription="back"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Profil"
            android:textSize="20sp"
            android:fontFamily="@font/dmsans_bold"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/top_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Profile Image -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_account_circle_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Edit Icon -->
            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_edit"
                android:background="@drawable/circle_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                app:tint="@color/blue_500" />

            <!-- Edit Profile Button -->
            <Button
                android:id="@+id/btn_ubah_profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ubah Profil"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nama"
            android:text="@string/users_name"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_nama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:text="@string/username_profile"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:text="@string/users_email"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nomor_handphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_number_phone_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nomor Handphone"
            android:text="@string/phone_number"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_nomor_handphone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_date_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tanggal Lahir"
            android:text="@string/date_birth"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>